@@ -1,4 +1,8 @@
 2013-02-04: Jason Long <jlong@messiah.edu>
+ * lib/Mail/DKIM/Verifier.pm: avoid an 'uninitialized value' warning when
+   signature being verified is missing a d= tag
+
+2013-02-04: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM/DNS.pm: construct a default RESOLVER that sets
    udppacketsize to 1280. This enables EDNS0 (extension mechanism for DNS),
    allowing Mail::DKIM to handle larger keys.
